k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-app
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: restaurant
  template:
    metadata:
      labels:
        app: restaurant
    spec:
      containers:
      - name: web
        image: zyond/cicd:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: dataprotection-keys
          mountPath: /app/keys
      volumes:
      - name: dataprotection-keys
        emptyDir: {}
