k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
spec:
  type: LoadBalancer
  selector:
    app: restaurant
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
